--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=stackit
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/stackit?useSSL=false&serverTimezone=UTC
+spring.datasource.username=gaurav
+spring.datasource.password=gaurav123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Optional: Format SQL logs
+spring.jpa.properties.hibernate.format_sql=true
