--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=stackit
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/stackit?useSSL=false&serverTimezone=UTC
-spring.datasource.username=gaurav
-spring.datasource.password=gaurav123
+spring.datasource.username=root
+spring.datasource.password=Godisgood1216
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
